--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,1 +1,38 @@
-<p>display works!</p>
+<div class="container">
+    <div class="row align-items-center"> <!--justify-content-md-center-->
+        <div class="col-lg-12 mat-elevation-z8 justify-content-md-center">
+            <!--<div class="loading-overlay" *ngIf="isLoading">
+                <mat-spinner *ngIf="isLoading" diameter="50"></mat-spinner>
+            </div> -->
+            <div class="display-table-container">
+                <table mat-table [dataSource]="memberData" class="display-table" matSort>
+                    <ng-container matColumnDef="isPrimary">
+                        <th mat-header-cell *matHeaderCellDef>Primary</th>
+                        <td mat-cell *matCellDef="let row">{{row.isPrimary}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="emailAddress">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                        <td mat-cell *matCellDef="let row">{{row.emailAddress}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="emailTypeId">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Type ID</th>
+                        <td mat-cell *matCellDef="let row">{{row.emailTypeId}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="description">
+                        <th mat-header-cell *matHeaderCellDef>Description</th>
+                        <td mat-cell *matCellDef="let row">{{row.description}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="timeCreated">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created</th>
+                        <td mat-cell *matCellDef="let row">{{row.timeCreated | date}}</td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="colNames"></tr>
+                    <tr mat-row *matRowDef="let row; columns: colNames;"></tr>
+                </table>
+            </div>
+            <mat-paginator [length]="memberLength" [pageSize]="7" aria-label="Select Page"></mat-paginator>
+            <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+        </div>
+    </div>
+</div>
