--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,1 +1,53 @@
-<p>input works!</p>
+<div class="container">
+    <div class="row align-items-center form-row">
+        <div class="col-lg-12 mat-elevation-z8 input-column">
+            <form class="input-container" [formGroup]="inputGroup" ngNativeValidate>
+                <mat-card class="col-md-6">
+                    <mat-card-header>
+                        <mat-card-title>Input Information</mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div class="row">
+                            <div class="col-md-8">
+                                <mat-form-field class="full-width">
+                                    <input matNativeControl placeholder="Enter Email Address" formControlName="emailAddress">
+                                </mat-form-field>
+                                <small class="text-danger" *ngIf="emailAlertValidate">Email address is required</small>
+                                <small class="text-danger" *ngIf="invalidEmailValidate">Input valid Email Address</small>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <mat-slide-toggle formControlName="emailTypeId" color="primary">Primary Email Address?</mat-slide-toggle>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <mat-form-field class="full-width">
+                                    <mat-label>Email Type ID</mat-label>
+                                    <mat-select [formControl]="emailIdControl">
+                                        <mat-option>Choose Email ID</mat-option>
+                                        <mat-option *ngFor="let emailId of emailIds" [value]="emailId.rawValue">{{emailId.userValue}}</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                                
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <mat-form-field class="full-width">
+                                    <textarea matNativeControl placeholder="Description" formControlName="description" class="description-field"></textarea>
+                                </mat-form-field>
+                                <small class="text-danger" *ngIf="descriptionAlertValidate">Description is required</small>
+                            </div>
+                        </div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-raised-button class="submit-button" color="primary" (click)="inputData()">Submit</button>
+                        <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+                    </mat-card-actions>
+                </mat-card>
+            </form>
+        </div>
+    </div>
+</div>
