Turning In Commit

--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,9 +1,6 @@
 <div class="container">
-    <div class="row align-items-center"> <!--justify-content-md-center-->
+    <div class="row align-items-center">
         <div class="col-lg-12 mat-elevation-z8 justify-content-md-center">
-            <!--<div class="loading-overlay" *ngIf="isLoading">
-                <mat-spinner *ngIf="isLoading" diameter="50"></mat-spinner>
-            </div> -->
             <div class="display-table-container">
                 <table mat-table [dataSource]="memberData" class="display-table" matSort>
                     <ng-container matColumnDef="isPrimary">
