--- a/src/app/display/display.component.scss
+++ b/src/app/display/display.component.scss
@@ -34,11 +34,12 @@
 td { 
     margin-left: 8px;
 }
+// - MARK - NEED TO MAKE MOBILE COMPLIANT THAT WOULD BE THE NEXT TODO FOR DESIGN.
 .mat-column-timeCreated {
     width: 128px;
 }
 .mat-column-emailAddress {
-    width: 128px;
+    width: 256px;
 }
 .mat-column-isPrimary {
     width: 64px;
