Updated a few bugs and added much more support to the v2

--- a/src/app/v2-app/v2-app.component.html
+++ b/src/app/v2-app/v2-app.component.html
@@ -1,1 +1,8 @@
-<p>v2-app works!</p>
+<div fxLayout="column" fxFlexFill>
+    <div fxFlex="10" class="v2-navbar-wrapper" fxFlexFill>
+        <app-v2-navbar></app-v2-navbar>
+    </div>
+    <div fxFlex="90" class="v2-wrapper" fxFlexFill>
+        <router-outlet></router-outlet>
+    </div>
+</div>
