Added V2 Nav, need to add support to switch back to V1

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <mat-toolbar color="primary">
-        <button mat-icon-button class="nav-icon" aria-label="Home Button and Icon" [routerLink]="['/']">
+        <button mat-icon-button class="nav-icon" aria-label="Home Button and Icon" [routerLink]="['']">
             <mat-icon>home</mat-icon>
             <!--<span>Orange Bees Programming Challenge</span>-->
         </button>
         <span class="toolbar-space"></span>
-        <button mat-icon-button class="nav-icon" aria-label="Input Button and Add Note Icon" [routerLink]="['/input']">
+        <button mat-icon-button class="nav-icon" aria-label="Input Button and Add Note Icon" [routerLink]="['input']">
             <mat-icon>note_add</mat-icon>
         </button>
-        <button mat-icon-button class="nav-icon" aria-label="Input Button and Add Note Icon" [routerLink]="['/v2/display']">
+        <button mat-icon-button class="nav-icon" aria-label="Input Button and Add Note Icon" [routerLink]="['v2', 'display']">
           <mat-icon>open_in_browser</mat-icon>
           V2
         </button>
